REGRESSION(r181571): Build broken when USE(OPENGL_ES_2) is defined. https://bugs.webkit.org/show_bug.cgi?id=145156

Reviewed by Alex Christensen.

Source/ThirdParty/ANGLE:

* include/GLES2/gl2softlinking.h: Revert r181589. Vertex Array Objects are not in GLESv2.

Source/WebCore:

No new tests, no behavior changes.

Vertex Array Objects are not available in OpenGLESv2.
Add guards to avoid using this when building with GLESv2.

* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::createVertexArray):
(WebCore::GraphicsContext3D::deleteVertexArray):
(WebCore::GraphicsContext3D::isVertexArray):
(WebCore::GraphicsContext3D::bindVertexArray):


Canonical link: https://commits.webkit.org/163197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184605 268f45cc-cd09-0410-ab3c-d52691b4dbfc